--- a/css/styles.css
+++ b/css/styles.css
@@ -1,6 +1,10 @@
+
+/*************************************************TAG SELECTOR*************************************************/
 body {
-    background-color:#49c5b6;
+    background-color:#42d0c0;
  }   
+
+ 
 
  hr {
      border-style: none;
@@ -11,11 +15,16 @@ body {
  }
  img {
      height: 100%;
-     
+     border-radius: 5px;
+ }
+
+ img:hover{
+     border-radius: 0%;
  }
  h1{
      color: #DF6C4F;
+     
  }
  h2{
-     color: #AFCBFF;
+     color: #5088ef;
  }
